--- a/240112/index.html
+++ b/240112/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <form action="textarea/select/optgroup/option 사용">
-        <textarea name="review" id="review01" cols="1" rows="1"></textarea>
+        <textarea name="review" id="review01" cols="30" rows="5"></textarea>
         <select name="selected" id="select01">
           <option value="kimbap">김밥</option>
           <option value="ramen">라면</option>
@@ -82,7 +82,7 @@
         </table>
       </fieldset>
     </form> -->
-    <form action="미션">
+    <!-- <form action="미션">
       <fieldset>
         <legend>학사정보 조회서비스</legend>
         <div>
@@ -103,6 +103,6 @@
       <div id="testbox">
         <input type="submit" value="조회하기" />
       </div>
-    </form>
+    </form> -->
   </body>
 </html>
