--- a/240117/Roblock/미션/ROBLOX.html
+++ b/240117/Roblock/미션/ROBLOX.html
@@ -35,7 +35,7 @@
         <label for="agree">이용약관을 검토했으며 이에 동의합니다.</label>
       </section>
       <section>
-        <input id="yes" type="checkbox" />
+        <input id="yes" type="checkbo`x" />
         <label for="yes">개인정보 처리방침에 동의합니다.</label>
       </section>
       <section>
