--- a/240126/flex_project01/index01.html
+++ b/240126/flex_project01/index01.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style01.css" />
+    <!-- defer는 비동기처리 했다는 의미 -->
+    <script defer src="./script.js"></script>
     <title>Document</title>
   </head>
   <body>
