--- a/0104_0116/240111/index.html
+++ b/0104_0116/240111/index.html
@@ -17,7 +17,7 @@
       <area shape="circle" coords="360,244,30" href="https://www.coupang.com" alt="cupang home">
      
   
-    </maph
+    </map>
   </body>
   </body>
 </html>
