--- a/240123/project.html
+++ b/240123/project.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div id="bodymiddle">
-        <img src="./img/2041357502_XOBascNC_1MUSINSA.jpg" alt="" width="490" />
+        <img src="./img/MUSINSA_idxmake.jpg" alt="" width="490" />
         <div id="inner-content">
           <h3>편안한 와이드룩 시즌오프</h3>
           <h5>앵글런 SALE ~50% off</h5>
@@ -45,6 +45,58 @@
       <div id="bodybottom">
         <h5>첫구매 최대 6만 5천원 혜택 받기></h5>
       </div>
+    </article>
+    <article id="menu-top">
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+    </article>
+    <article id="menu-bottom">
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
+        <div>
+          <p></p>
+          <h4>오프라인</h4>
+        </div>
     </article>
   </body>
 </html>
