--- a/240124/index02.html
+++ b/240124/index02.html
@@ -9,6 +9,8 @@
   <body>
     <section>
       <div></div>
+     
     </section>
+    <section> <div id="second"></div></section>
   </body>
 </html>
