--- a/240130_1/index.html
+++ b/240130_1/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="wrap">
-        <header>
-            <h1>
-                <img src="./Logo.png" alt="">
-                <a href="#">Lune Petit</a></h1>
-            <span class="btn">
-                <a href="#">
-                    <span class="bar"> Home</span>
-                   </a>
-                <a href="#">
-                    <span class="bar">Menu</span>
-                    </a>
-                <a href="#">
-                    <span class="bar last">Contact</span>
-                    </a>
-            </span>
-        </header>
-    <div class="container">
+      <header>
+        <h1>
+          <img src="./Logo.png" alt="" />
+          <a href="#">Lune Petit</a>
+        </h1>
+        <span class="btn">
+          <a href="#">
+            <span class="bar"> Home</span>
+          </a>
+          <a href="#">
+            <span class="bar">Menu</span>
+          </a>
+          <a href="#">
+            <span class="last">Contact</span>
+          </a>
+        </span>
+      </header>
+      <div class="container">
         <div class="content">
-            <img src="./Rectangle 19.png" alt="">
-            <h1>
-                <span>KIM</span>
-                <span>YI</span>
-                <span>SEUL</span>
-            </h1>
+          <img class="K" src="./Rectangle 19.png" alt="" />
+          <img class="Y" src="./home2.png" alt="" />
+          <img class="S" src="./home3.png" alt="" />
+
+          <h1>
+            <span class="kim">KIM</span>
+            <span class="yi">YI</span>
+            <span>SEUL</span>
+          </h1>
         </div>
+      </div>
     </div>
-    </div>
-    
-</body>
+  </body>
 </html>
