--- a/Project/index.html
+++ b/Project/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/b06e382e17.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <scriptclo
+      src="https://kit.fontawesome.com/b06e382e17.js"
+      crossorigin="anonymous"
+    ></scriptclo>
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrap">
-
-
-            <header>
-                <div class="logo">
-                    <img src="./img/logo.png" alt="">
-                    <h1>Lune Petit</h1>
-                
-            <div>
-                <a href="">Home</a>
-                <a href="">Menu</a>
-                <a href="">Contact</a></div>
-            </div>
-        </header>
-            <section>
-                <nav>
-                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-square-github"></i></a>
-                </nav>
-                <div>
-                    <span>KIM</span>
-                    <span>YI</span>
-                    <span>SEUL</span>
-                </div>
-                <div><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
-            </section>
-
+      <header>
+        <div class="head">
+          <div class="logo">
+            <img src="./img/logo.png" alt="" />
+            <h1>Lune Petit</h1>
+          </div>
+          <div class="gnb">
+            <a href="">Home</a>
+            <a href="">Menu</a>
+            <a href="">Contact</a>
+          </div>
+        </div>
+      </header>
+      <section class="content">
+        <div class="name">
+          <span>KIM</span>
+          <span>YI</span>
+          <span>SEUL</span>
+        </div>
+        <!-- <div class="image-files">
+          <img src="./img/brooke-lark-pGM4sjt_BdQ-unsplash.jpg" alt="" />
+          <img src="./img/jason-leung-60j0UB-Z_Yk-unsplash.jpg" alt="" />
+          <img src="./img/nimble-made-kY8hmUQV9Ek-unsplash.jpg" alt="" />
+        </div> -->
+      </section>
     </div>
-</body>
+  </body>
 </html>
