--- a/240206/index05.html
+++ b/240206/index05.html
@@ -7,63 +7,49 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrap">
-      <div class="section01">
-        <div class="content">
-          <h1>Testimonials</h1>
-          <div><img src="./imagestwo/face-01.jpg" alt="" /></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            eum nam culpa consequuntur numquam officia soluta aliquam,
-            voluptates magnam sapiente nisi pariatur, esse ipsum quibusdam rem
-            molestias, dignissimos sed temporibus?
-          </p>
-          <h5>Ackerley</h5>
-          <span>Media Analyst at <span>ZenDesk</span></span>
-        </div>
-        <div class="buttons">
-          <span></span>
-          <span></span>
-          <span></span>
+    <div class="tab-inner">
+      <input type="radio" name="tap" id="tap1" checked />
+      <input type="radio" name="tap" id="tap2" />
+      <input type="radio" name="tap" id="tap3" />
+      <h1>HTML+CSS Slider</h1>
+      <div class="tabs">
+        <div class="items">
+          <div>
+            <img src="./imagestwo/face-01.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+              quos, in unde commodi pariatur quas corporis et sapiente numquam
+              vel voluptatem tenetur alias eos maxime dolorum, quidem dolor!
+              Doloremque, ipsa.
+            </p>
+            <p><b>Ackerley</b> Media Analyst at <span>ZenDesk</span></p>
+          </div>
+          <div>
+            <img src="./imagestwo/face-02.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+              quos, in unde commodi pariatur quas corporis et sapiente numquam
+              vel voluptatem tenetur alias eos maxime dolorum, quidem dolor!
+              Doloremque, ipsa.
+            </p>
+            <p><b>Dabria</b> Graphic Designer at <span>ChowNow</span></p>
+          </div>
+          <div>
+            <img src="./imagestwo/face-03.jpg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+              quos, in unde commodi pariatur quas corporis et sapiente numquam
+              vel voluptatem tenetur alias eos maxime dolorum, quidem dolor!
+              Doloremque, ipsa.
+            </p>
+            <p><b>Vadim</b> Developer at <span>Startup institute</span></p>
+          </div>
         </div>
       </div>
-      <div class="section02">
-        <div class="content">
-          <h1>Testimonials</h1>
-          <div><img src="./imagestwo/face-02.jpg" alt="" /></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            eum nam culpa consequuntur numquam officia soluta aliquam,
-            voluptates magnam sapiente nisi pariatur, esse ipsum quibusdam rem
-            molestias, dignissimos sed temporibus?
-          </p>
-          <h5>Ackerley</h5>
-          <span>Media Analyst at <span>ZenDesk</span></span>
-        </div>
-        <div class="buttons">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-      <div class="section03">
-        <div class="content">
-          <h1>Testimonials</h1>
-          <div><img src="./imagestwo/face-03.jpg" alt="" /></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            eum nam culpa consequuntur numquam officia soluta aliquam,
-            voluptates magnam sapiente nisi pariatur, esse ipsum quibusdam rem
-            molestias, dignissimos sed temporibus?
-          </p>
-          <h5>Ackerley</h5>
-          <span>Media Analyst at <span>ZenDesk</span></span>
-        </div>
-        <div class="buttons">
-          <span></span>
-          <span class="sect02"></span>
-          <span></span>
-        </div>
+      <div class="btn">
+        <label for="tap1"></label>
+        <label for="tap2"></label>
+        <label for="tap3"></label>
       </div>
     </div>
   </body>
