--- a/240203/index.html
+++ b/240203/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/b06e382e17.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -10,6 +14,7 @@
     <div id="wrap">
       <header>
         <h1>
+          <span><i class="fa-solid fa-moon"></i></span>
           <a href="#">Lune Petit</a>
         </h1>
         <span class="btn">
@@ -25,33 +30,35 @@
         </span>
       </header>
       <div class="container">
-        <div class="content">
-          <div class="name">
-            <span>KIM</span>
-            <span>YI</span>
-            <span>SEUL</span>
-          </div>
-          <div class="slide">
-            <ul>
-              <li>
-                <a href="">
-                  <h1>Hello !</h1>
-                  <img src="./img/hello.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="">
-                  <h1>I AM !</h1>
-                  <img src="./img/skatebo.jpg" alt=""
-                /></a>
-              </li>
-              <li>
-                <a href="">
-                  <h1>Hang Out With !</h1>
-                  <img src="./img/hangout.jpg" alt=""
-                /></a>
-              </li>
-            </ul>
+        <div class="frame">
+          <div class="content">
+            <div class="name">
+              <span>KIM</span>
+              <span>YI</span>
+              <span>SEUL</span>
+            </div>
+            <div class="slide">
+              <ul>
+                <li>
+                  <a href="">
+                    <h1>Hello !</h1>
+                    <img src="./img/hello.jpg" alt=""
+                  /></a>
+                </li>
+                <li>
+                  <a href="">
+                    <h1>I AM 이슬 !</h1>
+                    <img src="./img/skatebo.jpg" alt=""
+                  /></a>
+                </li>
+                <li>
+                  <a href="">
+                    <h1>Hang Out With !</h1>
+                    <img src="./img/hangout.jpg" alt=""
+                  /></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
