--- a/240203/index.html
+++ b/240203/index.html
@@ -40,10 +40,10 @@
             <div class="slide">
               <ul>
                 <li>
-                  <a href="">
+                  <a href="#">
                     <h1>Hello !</h1>
-                    <img src="./img/hello.jpg" alt=""
-                  /></a>
+                    <img src="./img/hello.jpg" alt="" />
+                  </a>
                 </li>
                 <li>
                   <a href="">
