--- a/240203/index.html
+++ b/240203/index.html
@@ -53,12 +53,76 @@
                 </li>
                 <li>
                   <a href="">
-                    <h1>Hang Out With !</h1>
-                    <img src="./img/hangout.jpg" alt=""
+                    <h1>Hang Out With Me !</h1>
+                    <img src="./img/hangout.jpg" alt="" id="hang"
                   /></a>
                 </li>
               </ul>
             </div>
+          </div>
+          <div class="about">
+            <div class="page1"></div>
+            <div class="page2"></div>
+            <div class="page3"></div>
+          </div>
+        </div>
+      </div>
+      <div class="section01">
+        <input id="tab1" name="button" type="radio" checked />
+        <input id="tab2" name="button" type="radio" />
+        <input id="tab3" name="button" type="radio" />
+        <div class="kim">
+          <h1>Basic Information</h1>
+        </div>
+        <div class="section-menu">
+          <div class="first-menu">
+            <div class="birth">
+              <h1>Birth</h1>
+              <p>
+                <span class="daytext">1996.11.19</span> <br />A형 / 전갈자리
+              </p>
+            </div>
+            <div class="personal">
+              <h1>Personality</h1>
+              <p>
+                <span class="personaltext">ACTIVE</span> <br />Positive /
+                Friendly
+              </p>
+            </div>
+            <div class="style">
+              <h1>Style</h1>
+              <p><span class="styletext">SIMPLE</span><br />Morden</p>
+            </div>
+            <div class="a"></div>
+            <div class="b"></div>
+            <div class="c"></div>
+          </div>
+        </div>
+        <div class="buttons">
+          <label for="tab1"></label>
+          <label for="tab2"></label>
+          <label for="tab3"></label>
+        </div>
+      </div>
+      <div class="section02">
+        <div class="yi">
+          <h1>Details</h1>
+        </div>
+        <div class="section-inner">
+          <div class="hobby">
+            <img src="./img/logo.png" alt="" />
+            <div>My hobby</div>
+            <div>I like skateborad, soccer and coffee...</div>
+          </div>
+          <div class="hobby-inner">
+            <div class="skate">
+              <img src="" alt="" />
+              <span></span>
+              <span></span>
+            </div>
+            <div class="soccer"></div>
+            <div class="coffee"></div>
+            <div class="music"></div>
           </div>
         </div>
       </div>
