--- a/Project/index.html
+++ b/Project/index.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <scriptclo
-      src="https://kit.fontawesome.com/b06e382e17.js"
-      crossorigin="anonymous"
-    ></scriptclo>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <div class="wrap">
-      <header>
-        <div class="head">
-          <div class="logo">
-            <img src="./img/logo.png" alt="" />
-            <h1>Lune Petit</h1>
+    <div class="tab-inner">
+      <input type="radio" name="tabmenu" id="tab1" />
+      <input type="radio" name="tabmenu" id="tab2" />
+      <input type="radio" name="tabmenu" id="tab3" />
+      <h1>HTML + CSS Slider</h1>
+      <div class="tabs">
+        <div class="items">
+          <div>
+            <img src="./images/face-01.jpg" alt="face01" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae
+              illo laboriosam magni perferendis nemo vel perspiciatis voluptates
+              quo, quidem, accusamus quod corporis asperiores placeat aperiam
+              esse iusto repudiandae consequatur reprehenderit.
+            </p>
+            <p>
+              <b>Ackerley</b>
+              Media Analyst at <span>ZenDesk</span>
+            </p>
           </div>
-          <div class="gnb">
-            <a href="">Home</a>
-            <a href="">Menu</a>
-            <a href="">Contact</a>
+          <div>
+            <img src="./images/face-02.jpg" alt="face02" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae
+              illo laboriosam magni perferendis nemo vel perspiciatis voluptates
+              quo, quidem, accusamus quod corporis asperiores placeat aperiam
+              esse iusto repudiandae consequatur reprehenderit.
+            </p>
+            <p>
+              <b>Dabria</b>
+              Graphic Designer at <span>ChowNow</span>
+            </p>
+          </div>
+          <div>
+            <img src="./images/face-03.jpg" alt="face03" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae
+              illo laboriosam magni perferendis nemo vel perspiciatis voluptates
+              quo, quidem, accusamus quod corporis asperiores placeat aperiam
+              esse iusto repudiandae consequatur reprehenderit.
+            </p>
+            <p>
+              <b>Vadim</b>
+              Developer at <span>Startup Institute</span>
+            </p>
           </div>
         </div>
-      </header>
-      <section class="content">
-        <div class="name">
-          <span>KIM</span>
-          <span>YI</span>
-          <span>SEUL</span>
-        </div>
-        <!-- <div class="image-files">
-          <img src="./img/brooke-lark-pGM4sjt_BdQ-unsplash.jpg" alt="" />
-          <img src="./img/jason-leung-60j0UB-Z_Yk-unsplash.jpg" alt="" />
-          <img src="./img/nimble-made-kY8hmUQV9Ek-unsplash.jpg" alt="" />
-        </div> -->
-      </section>
+      </div>
+      <div class="btn">
+        <label for="tab1"></label>
+        <label for="tab2"></label>
+        <label for="tab3"></label>
+      </div>
     </div>
   </body>
 </html>
