--- a/240208/index.html
+++ b/240208/index.html
@@ -33,16 +33,70 @@
   <!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
   <body data-hijacking="off" data-animation="rotate">
     <div class="container">
-      <!-- <section id="home" class="cd-section visible">
+      <section id="home" class="cd-section visible">
         <div>
-          <h2>home</h2>
+          <div class="content">
+            <div class="home-inner">
+              <h3 class="welcome-text">
+                You Can Do It
+                <span>with EZEN IT <i class="fas fa-heart"></i> </span>
+              </h3>
+              <div class="opacity-image"></div>
+              <div class="home-heading">
+                <span>Creative</span>
+                <span>Architecture</span>
+                <span>Specialists</span>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section id="about" class="cd-section visible">
         <div>
-          <h2>about</h2>
+          <div class="content">
+            <div class="about-inner">
+              <div class="about-items">
+                <div class="item">
+                  <img src="./images/careers-main-01.png" alt="career" />
+                  <span>
+                    <h3>Together we can make an impact</h3>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Optio impedit sed qui amet necessitatibus quasi blanditiis
+                      rem id. Vitae repellendus minus rem non nesciunt sequi
+                      earum molestiae vero nam numquam?
+                    </p>
+                  </span>
+                </div>
+                <div class="item">
+                  <img src="./images/careers-main-02.png" alt="career" />
+                  <span>
+                    <h3>We're always looking fot talent</h3>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Optio impedit sed qui amet necessitatibus quasi blanditiis
+                      rem id. Vitae repellendus minus rem non nesciunt sequi
+                      earum molestiae vero nam numquam?
+                    </p>
+                  </span>
+                </div>
+                <div class="item">
+                  <img src="./images/careers-main-03.png" alt="career" />
+                  <span>
+                    <h3>Fellowship</h3>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Optio impedit sed qui amet necessitatibus quasi blanditiis
+                      rem id. Vitae repellendus minus rem non nesciunt sequi
+                      earum molestiae vero nam numquam?
+                    </p>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </section> -->
+      </section>
       <section id="project" class="cd-section visible">
         <div>
           <div class="content">
@@ -79,7 +133,10 @@
                       <div><span>320</span>WORKING MEMBER</div>
                       <div><span>202</span>WORKING HOUR</div>
                     </div>
-                    <a href="view-project" class="view-project"
+                    <a
+                      href="./projectdetail01.html"
+                      class="view-project"
+                      data-featherlight="iframe"
                       >View Project<i class="fa fa-long-arrow-right"></i
                     ></a>
                   </div>
