--- a/240203/index.html
+++ b/240203/index.html
@@ -29,6 +29,11 @@
             <span class="last">Contact</span>
           </a>
         </span>
+        <div class="trigger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </header>
       <div class="container">
         <div class="frame">
@@ -132,7 +137,7 @@
               <div class="soccer">
                 <img src="./img/ballsmall.png" alt="" />
               </div>
-              <span>Watcnig Soccer</span>
+              <span>Watching Soccer</span>
               <div class="viewmore">
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
