--- a/240203/index.html
+++ b/240203/index.html
@@ -163,6 +163,38 @@
           </div>
         </div>
       </div>
+      <div class="contact">
+        <div class="seul">
+          <h1>Contact</h1>
+        </div>
+        <div class="contact-inner">
+          <div class="mysocial">
+            <span class="network">My Social Network</span>
+            <div class="social">
+              <span><i class="fa-brands fa-instagram"></i></span>
+              <span><i class="fa-brands fa-github"></i></span>
+              <span><i class="fa-brands fa-twitter"></i></span>
+              <span><i class="fa-brands fa-google"></i></span>
+            </div>
+            <div class="link">
+              <h3>Instagram</h3>
+              <h3>Git Hub</h3>
+              <h3>Twitter</h3>
+              <h3>G-mail</h3>
+            </div>
+          </div>
+          <div class="map">
+            <i class="fa-solid fa-location-dot"></i>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1582.6120234696784!2d126.78889204112886!3d37.50263358495631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sko!2skr!4v1707869979695!5m2!1sko!2skr"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
