--- a/240208/index.html
+++ b/240208/index.html
@@ -28,6 +28,7 @@
     <!-- custom -->
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css" />
     <title>page scroll effect(velocity)</title>
   </head>
   <!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
@@ -556,6 +557,30 @@
           </div>
         </div>
       </section>
+      <header>
+        <div class="gnb-inner">
+          <div class="logo">
+            <a href="#"><img src="./images/logo.png" alt="logo" /></a>
+          </div>
+          <div class="gnb">
+            <div class="menu">
+              <a href="#home">Home</a>
+              <a href="#about">About</a>
+              <a href="#project">Project</a>
+              <a href="#plan">Plan</a>
+              <a href="#awards">Awards</a>
+              <a href="#location">Location</a>
+              <a href="#contact">Contact</a>
+            </div>
+            <div class="slogan">We design places, not projects</div>
+          </div>
+          <div class="trigger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+      </header>
     </div>
     <nav>
       <ul class="cd-vertical-nav">
