--- a/240203/index.html
+++ b/240203/index.html
@@ -99,6 +99,8 @@
               <h1>Style</h1>
               <p><span class="styletext">SIMPLE</span><br />Morden</p>
             </div>
+          </div>
+          <div class="second-menu">
             <div class="a"></div>
             <div class="b"></div>
             <div class="c"></div>
