--- a/240208/public/index.html
+++ b/240208/public/index.html
@@ -29,9 +29,9 @@
     <!-- fage-scroll-effect -->
     <link rel="stylesheet" href="./js/velocity/velocity.css" />
     <script defer src="./js/velocity/modernizr.js"></script>
-    <script defer src="./js/velocity/main.js"></script>
     <script defer src="./js/velocity/velocity.min.js"></script>
     <script defer src="./js/velocity/velocity.ui.min.js"></script>
+    <script defer src="./js/velocity/main.js"></script>
     <!-- slick-slider -->
     <link rel="stylesheet" href="./js/slick/slick-theme.css" />
     <link rel="stylesheet" href="./js/slick/slick.css" />
@@ -48,7 +48,7 @@
     <title>Architecture Agency</title>
   </head>
   <!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
-  <body data-hijacking="off" data-animation="rotate">
+  <body data-hijacking="on" data-animation="rotate">
     <div class="container">
       <section id="home" class="cd-section visible">
         <div>
@@ -68,7 +68,7 @@
           </div>
         </div>
       </section>
-      <section id="about" class="cd-section visible">
+      <section id="about" class="cd-section">
         <div>
           <div class="content">
             <div class="about-inner">
@@ -114,7 +114,7 @@
           </div>
         </div>
       </section>
-      <section id="project" class="cd-section visible">
+      <section id="project" class="cd-section">
         <div>
           <div class="content">
             <div class="project-inner">
@@ -288,7 +288,7 @@
           </div>
         </div>
       </section>
-      <section id="plan" class="cd-section visible">
+      <section id="plan" class="cd-section">
         <div>
           <div class="content">
             <div class="plan-inner">
@@ -419,7 +419,7 @@
           </div>
         </div>
       </section>
-      <section id="awards" class="cd-section visible">
+      <section id="awards" class="cd-section">
         <div>
           <div class="content">
             <div class="awards-inner">
@@ -453,7 +453,7 @@
           </div>
         </div>
       </section>
-      <section id="location" class="cd-section visible">
+      <section id="location" class="cd-section">
         <div>
           <div class="content">
             <div class="location-inner">
@@ -518,7 +518,7 @@
           </div>
         </div>
       </section>
-      <section id="contact" class="cd-section visible">
+      <section id="contact" class="cd-section">
         <div>
           <div class="content">
             <div class="contact-inner">
