--- a/240219/example/index.html
+++ b/240219/example/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body id="theBody">
-    <button>배경컬러 바꾸기!</button>
+    <button>모양을바꿔보세요!</button>
+    <div></div>
   </body>
 </html>
