--- a/240220/javascript/index02.html
+++ b/240220/javascript/index02.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="container">
-      <form action="https://localhost:3000/order" method="post">
+      <form name="order" action="https://localhost:3000/order" method="post">
         <fieldset>
           <legend>상품 정보</legend>
           <ul>
