--- a/ETUDE/index.html
+++ b/ETUDE/index.html
@@ -50,7 +50,203 @@
           <i class="fa-solid fa-x"></i>
         </span>
       </div>
-      <div class="search-click-section"></div>
+      <div class="search-click-section">
+        <div class="search-for">Search For Products</div>
+        <div class="search-box">
+          <div class="search-box-inner">#립케어 강자! 진저슈가</div>
+          <a href="" class="search-box-icon"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></a>
+        </div>
+        <div class="search-tag">
+          <span>TREND <b>#TAG</b></span>
+          <a href="">신제품 모아보기</a>
+          <a href="">진저슈가</a>
+          <a href="">플레이 컬러 아이즈</a>
+          <a href="">순정</a>
+          <a href="">비건</a>
+          <a href="">픽싱틴트</a>
+        </div>
+      </div>
+    </div>
+    <div class="toggle-btn-click">
+      <div class="btn-list">
+        <a class="toggle-menu" href=""><span>BRAND</span></a>
+        <span class="toggle-menu-inside">
+          <a class="toggle-menu-inner" href="">
+            <span>About ETUDE</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>뷰티즌</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>지구를 위한 활동</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+        <a class="toggle-menu" href=""><span>PRODUCT</span> </a>
+        <!-- <span class="toggle-menu-inside menu02">
+          <a class="toggle-menu-inner" href="">
+            <span>신제품 모아보기</span>
+            <span></span>
+          </a>
+          <a class="toggle-menu-inner category" href="">
+            <a href="">카테고리</a>
+            <div class="category-wrap">
+              <a class="category all" href="">전체</a>
+              <a class="category eye" href="">아이</a>
+              <div class="eye-menu">
+                <a href="">전체</a>
+                <a href="">싱글섀도우</a>
+                <a href="">아이팔레트</a>
+                <a href="">마스카라</a>
+                <a href="">아이라이너</a>
+                <a href="">아이브라우</a>
+              </div>
+              <a class="category lip" href="">립</a>
+              <div class="lip-menu">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+              <a class="category face" href="">페이스</a>
+              <div class="face-menu">
+                <a href="">전체</a>
+                <a href="">베이스·프라이머</a>
+                <a href="">쿠션·파운데이션</a>
+                <a href="">팩트·파우더</a>
+                <a href="">컨투어링·하이라이터</a>
+                <a href="">블러셔</a>
+              </div>
+              <a class="category nail" href="">네일</a>
+              <div class="nail-menu">
+                <a href="">전체</a>
+                <a href="">네일컬러</a>
+                <a href="">네일케어</a>
+                <a href="">네일리무버</a>
+              </div>
+              <a class="category skin" href="">스킨케어</a>
+              <div class="skin-menu">
+                <a href="">전체</a>
+                <a href="">토너·패드</a>
+                <a href="">에멀젼</a>
+                <a href="">에센스·세럼</a>
+                <a href="">크림·밤</a>
+                <a href="">미스트</a>
+                <a href="">선케어</a>
+                <a href="">세트</a>
+                <a href="">기타</a>
+              </div>
+              <a class="category mask" href="">마스크팩</a>
+              <div class="mask-menu">
+                <a href="">전체</a>
+                <a href="">시트마스크</a>
+                <a href="">페이셜팩</a>
+                <a href="">패치</a>
+              </div>
+              <a class="category clean" href="">클렌저</a>
+              <div class="clean-menu">
+                <a href="">전체</a>
+                <a href="">페이셜 클렌징</a>
+                <a href="">메이크업 클렌징</a>
+                <a href="">필링·스크럽</a>
+              </div>
+              <a class="category body" href="">바디</a>
+              <div class="body-menu">
+                <a href="">전체</a>
+                <a href="">워시</a>
+                <a href="">보습</a>
+                <a href="">핸드·풋</a>
+              </div>
+              <a class="category hair" href="">헤어</a>
+              <div class="hair-menu">
+                <a href="">전체</a>
+                <a href="">컬러·스타일링</a>
+                <a href="">헤어케어</a>
+              </div>
+              <a class="category tool" href="">툴</a>
+              <div class="tool-menu">
+                <a href="">전체</a>
+                <a href="">브러쉬</a>
+                <a href="">퍼프</a>
+                <a href="">화장솜·면봉</a>
+                <a href="">속눈썹·브라우</a>
+                <a href="">공용기</a>
+                <a href="">헤어도구</a>
+                <a href="">기타</a>
+              </div>
+            </div>
+          </a>
+        </span> -->
+        <a class="toggle-menu" href=""><span>MAKEUP LOOK</span> </a>
+
+        <a class="toggle-menu" href=""><span>FOUNDATION FACTORY</span> </a>
+
+        <a class="toggle-menu" href=""><span>@etudeofficial</span> </a>
+        <span class="toggle-menu-inside menu05">
+          <a class="toggle-menu-inner" href="">
+            <span>Instagram</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>Tiktok</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+        <a class="toggle-menu" href=""><span>STORE</span> </a>
+        <span class="toggle-menu-inside menu06">
+          <a class="toggle-menu-inner" href="">
+            <span>온라인</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>오프라인</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+        <a class="toggle-menu" href=""><span>CONTACT</span></a>
+        <span class="toggle-menu-inside menu07">
+          <a class="toggle-menu-inner" href="">
+            <span>공지사항</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>FAQ</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>고객문의</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+        <a class="toggle-menu" href=""><span>MEMBERSHIP</span></a>
+        <span class="toggle-menu-inside menu08">
+          <a class="toggle-menu-inner" href="">
+            <span>핑크멤버십</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>뷰티포인트</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+        <a class="toggle-menu" href=""><span>뽀오얀</span></a>
+        <span class="toggle-menu-inside menu09">
+          <a class="toggle-menu-inner" href="">
+            <span>About 뽀오얀</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+          <a class="toggle-menu-inner" href="">
+            <span>제품 보기</span>
+            <span><i class="fa-solid fa-chevron-right"></i></span>
+          </a>
+        </span>
+      </div>
     </div>
   </body>
 </html>
