--- a/ETUDE/index.html
+++ b/ETUDE/index.html
@@ -520,6 +520,345 @@
         </ul>
       </div>
     </div>
+    <div class="common-responsibility-toggle-menu">
+      <div class="common-responsibility-toggle-menu-header">
+        <form class="common-responsibility-search-box" action="">
+          <input
+            id="common-responsibility-search-box-inner"
+            type="text"
+            placeholder="#립케어 강자! 진저슈가"
+          />
+          <span class="common-responsibility-search-box-icon"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></span>
+        </form>
+        <span class="common-responsibility-search-box-icon-x">
+          <i class="fa-solid fa-x"></i>
+        </span>
+      </div>
+      <div class="common-responsibility-toggle-menu-inner">
+        <div class="common-responsibility-toggle-menu-inner-title">
+          <div class="common-responsibility-toggle-menu-inner-title-menu">
+            MENU
+          </div>
+          <div class="common-responsibility-toggle-menu-inner-title-cate">
+            CATEGORY
+          </div>
+        </div>
+        <div class="common-responsibility-toggle-menu-inner-title-list-menu">
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">BRAND</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list">
+                <a href="">About ETUDE</a>
+                <a href="">뷰티즌</a>
+                <a href="">지구를 위한 활동</a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">PRODUCT</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list common-pro">
+                <a href="">신제품</a>
+                <a href="">카테고리</a>
+                <a href=""></a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">MAKEUP LOOK</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">FOUNDATION FACTORY</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">@etudeofficial</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list common-etu">
+                <a href="">Instagram</a>
+                <a href="">Tiktok</a>
+                <a href=""></a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">STORE</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list common-sto">
+                <a href="">온라인</a>
+                <a href="">오프라인</a>
+                <a href=""></a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">CONTACT</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list">
+                <a href="">고객사항</a>
+                <a href="">FAQ</a>
+                <a href="">고객문의</a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">MEMVERSHIP</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list common-mem">
+                <a href="">핑크멤버십</a>
+                <a href="">뷰티포인트</a>
+                <a href=""></a>
+              </div>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <div class="common-responsibility-menu">
+                <a href="">뽀오얀</a>
+                <span class="common-responsibility-menu-plus">
+                  <span></span>
+                  <span></span>
+                </span>
+              </div>
+              <div class="common-responsibility-menu-list common-ppo">
+                <a href="">About 뽀오얀</a>
+                <a href="">제품 보기</a>
+                <a href=""></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="common-responsibility-toggle-menu-inner-title-list-cate">
+          <ul>
+            <li>
+              <div class="common-cate-wrap">
+                <div class="common-responsibility-menu-cate">
+                  <a href="">아이</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+                <div class="common-responsibility-menu-cate">
+                  <a href="">립</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+              </div>
+              <div class="common-responsibility-menu-list-cate">
+                <a href="">전체</a>
+                <a href="">싱글섀도우</a>
+                <a href="">아이팔레트</a>
+                <a href="">마스카라</a>
+                <a href="">아이라이너</a>
+                <a href="">아이브로우</a>
+              </div>
+              <div class="common-responsibility-menu-list-cate-lip">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+            </li>
+            <li>
+              <div class="common-cate-wrap">
+                <div class="common-responsibility-menu-cate">
+                  <a href="">페이스</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+                <div class="common-responsibility-menu-cate">
+                  <a href="">네일</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+              </div>
+              <div class="common-responsibility-menu-list-cate">
+                <a href="">전체</a>
+                <a href="">베이스·프라이머</a>
+                <a href="">쿠션·파운데이션</a>
+                <a href="">BB·컨실러</a>
+                <a href="">팩트·파우더</a>
+                <a href="">블러셔</a>
+              </div>
+              <div class="common-responsibility-menu-list-cate-lip">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+            </li>
+            <li>
+              <div class="common-cate-wrap">
+                <div class="common-responsibility-menu-cate">
+                  <a href="">스킨케어</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+                <div class="common-responsibility-menu-cate">
+                  <a href="">마스크·팩</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+              </div>
+              <div class="common-responsibility-menu-list-cate">
+                <a href="">전체</a>
+                <a href="">싱글섀도우</a>
+                <a href="">아이팔레트</a>
+                <a href="">마스카라</a>
+                <a href="">아이라이너</a>
+                <a href="">아이브로우</a>
+              </div>
+              <div class="common-responsibility-menu-list-cate-lip">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+            </li>
+            <li>
+              <div class="common-cate-wrap">
+                <div class="common-responsibility-menu-cate">
+                  <a href="">클렌저</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+                <div class="common-responsibility-menu-cate">
+                  <a href="">바디</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+              </div>
+              <div class="common-responsibility-menu-list-cate">
+                <a href="">전체</a>
+                <a href="">싱글섀도우</a>
+                <a href="">아이팔레트</a>
+                <a href="">마스카라</a>
+                <a href="">아이라이너</a>
+                <a href="">아이브로우</a>
+              </div>
+              <div class="common-responsibility-menu-list-cate-lip">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+            </li>
+            <li>
+              <div class="common-cate-wrap">
+                <div class="common-responsibility-menu-cate">
+                  <a href="">헤어</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+                <div class="common-responsibility-menu-cate">
+                  <a href="">툴</a>
+                  <span class="common-responsibility-menu-plus-cate">
+                    <span></span>
+                    <span></span>
+                  </span>
+                </div>
+              </div>
+              <div class="common-responsibility-menu-list-cate">
+                <a href="">전체</a>
+                <a href="">싱글섀도우</a>
+                <a href="">아이팔레트</a>
+                <a href="">마스카라</a>
+                <a href="">아이라이너</a>
+                <a href="">아이브로우</a>
+              </div>
+              <div class="common-responsibility-menu-list-cate-lip">
+                <a href="">전체</a>
+                <a href="">립스틱</a>
+                <a href="">틴트</a>
+                <a href="">글로스</a>
+                <a href="">립펜슬</a>
+                <a href="">립케어</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="common-responsibility-toggle-menu-footer"></div>
+    </div>
     <a id="common-gototop" schref=""><i class="fa-solid fa-angle-up"></i></a>
     <div class="ex-wrap">
       <div class="exa">
