--- a/Product/index.html
+++ b/Product/index.html
@@ -932,31 +932,52 @@
       <a id="common-gototop" schref=""><i class="fa-solid fa-angle-up"></i></a>
       <a id="common-addtocart" schref=""><i class="fa-solid fa-plus"></i></a>
     </div>
-    <div class="ex-wrap">
-      <div class="exa">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat
-        quis. Mollitia, impedit. Maxime fuga ullam dolor enim a! Saepe quidem
-        quaerat sint voluptatibus? Sed quod id optio provident rerum!
+    <div class="product-wrap">
+      <div class="pro-silder-img">
+        <img src="./product_img/img-category-nail.jpg" alt="" />
+        <img src="./product_img/all.jpg" alt="" /><img
+          src="./product_img/tool-f.jpg"
+          alt=""
+        />
       </div>
-      <div class="ex">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat
-        quis. Mollitia, impedit. Maxime fuga ullam dolor enim a! Saepe quidem
-        quaerat sint voluptatibus? Sed quod id optio provident rerum!
-      </div>
-      <div class="ex">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat
-        quis. Mollitia, impedit. Maxime fuga ullam dolor enim a! Saepe quidem
-        quaerat sint voluptatibus? Sed quod id optio provident rerum!
-      </div>
-      <div class="ex">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat
-        quis. Mollitia, impedit. Maxime fuga ullam dolor enim a! Saepe quidem
-        quaerat sint voluptatibus? Sed quod id optio provident rerum!
-      </div>
-      <div class="ex">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, repellat
-        quis. Mollitia, impedit. Maxime fuga ullam dolor enim a! Saepe quidem
-        quaerat sint voluptatibus? Sed quod id optio provident rerum!
+      <div class="pro-section">
+        <span class="new-product-wrap">
+          <span class="new-product"
+            ><span>신제품</span> <i class="fa-solid fa-chevron-down"></i>
+          </span>
+          <span class="pro-menu-desc"
+            >주목! 신상이 궁금해? 설레는 신상으로 채워지는 작은 행복</span
+          >
+          <span class="new-product-hidden-menu">
+            <a href="">신제품</a>
+            <a href="">카테고리</a>
+          </span>
+          <div class="pro-array-menu">
+            <span class="pro-total">총 26 개</span>
+            <span class="pro-array-select">
+              <a href="">
+                <i class="fa-solid fa-list"></i>
+              </a>
+              <a class="pro-icon-make" href="">
+                <span class="pro-icon-bar"></span>
+                <i class="fa-regular fa-square"></i>
+                <span class="pro-icon-bar"></span>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-buromobelexperte"></i>
+              </a>
+              <span class="pro-icon-shin">
+                <span>신상품순</span>
+                <i class="fa-solid fa-chevron-down"></i>
+              </span>
+              <span class="pro-list-select">
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+              </span>
+            </span>
+          </div>
+        </span>
       </div>
     </div>
   </body>
