--- a/Product/index.html
+++ b/Product/index.html
@@ -935,10 +935,8 @@
     <div class="product-wrap">
       <div class="pro-silder-img">
         <img src="./product_img/img-category-nail.jpg" alt="" />
-        <img src="./product_img/all.jpg" alt="" /><img
-          src="./product_img/tool-f.jpg"
-          alt=""
-        />
+        <img src="./product_img/all.jpg" alt="" />
+        <img src="./product_img/tool-f.jpg" alt="" />
       </div>
       <div class="pro-section">
         <span class="new-product-wrap">
