--- a/Product/product.html
+++ b/Product/product.html
@@ -64,6 +64,52 @@
                 src="./product_img/line_fix_brush_liner_02-430x430.jpg"
                 alt=""
             /></a>
+            <div class="product-detail">
+              <span>#은하수광택 #플럼퍼</span>
+              <a href="">글레이즈 플럼프 글로스 4g</a>
+              <div class="items-type">
+                <span></span><span></span><span></span>
+              </div>
+              <span class="pro-items-price">13,000원</span>
+            </div>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
+                alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
+                alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
+                alt=""
+            /></a>
+          </li>
+        </ul>
+        <ul class="pro-product-list">
+          <li>
+            <a href=""
+              ><img
+                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
+                alt=""
+            /></a>
+            <div class="product-detail">
+              <span></span>
+              <a href=""></a>
+              <div class="items-type">
+                <span></span><span></span><span></span>
+              </div>
+              <span></span>
+            </div>
           </li>
           <li>
             <a href=""
