--- a/Product/index.html
+++ b/Product/index.html
@@ -10,7 +10,7 @@
     ></script>
     <!-- custom -->
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./script.js"></script>
+    <script type="module" defer src="./script.js"></script>
     <title>메인페이지 헤더</title>
   </head>
   <body>
