--- a/240306/afternoon/유튜브 구현 js/index.html
+++ b/240306/afternoon/유튜브 구현 js/index.html
@@ -107,7 +107,7 @@
             </div>
           </div>
         </section>
-        <section class="content">
+        <section class="contents">
           <section class="content">
             <img src="./img/content01.jpg" alt="" />
           </section>
