--- a/240221/afternoon.js/index01.html
+++ b/240221/afternoon.js/index01.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style01.css" />
     <script defer src="./script01.js"></script>
-    <title>to do list - 코딩테스트 단골문제</title>
+    <title>투두리스트 코딩테스트 단골문제 중요!!!</title>
   </head>
   <body>
     <h1>To Do List</h1>
-    <form action="https://localhost:3000/todolist.js" method="post">
-      <input type="text" placeholder="오늘 할 일을 입력하세요." />
+    <form
+      name="testForm"
+      action="https://localhost:3000/todolist.js"
+      method="post"
+    >
+      <input type="text" placeholder="오늘 할 일을 입력하세요!" />
       <input type="submit" value="등록" />
     </form>
     <ul></ul>
