--- a/Product/proudct01.html
+++ b/Product/proudct01.html
@@ -951,7 +951,7 @@
             <a href="">카테고리</a>
           </span>
           <div class="pro-array-menu">
-            <span class="pro-total">총 </span>
+            <span class="pro-total">총 26개</span>
             <span class="pro-array-select">
               <a href="">
                 <i class="fa-solid fa-list"></i>
@@ -977,44 +977,17 @@
             </span>
           </div>
         </span>
-        <ul class="pro-product-list">
-          <!-- <li>
-            <a href=""
-              ><img
-                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
-                alt=""
-            /></a>
-            <div class="product-detail">
-              <span>#은하수광택 #플럼퍼</span>
-              <a href="">글레이즈 플럼프 글로스 4g</a>
-              <div class="items-type">
-                <span></span><span></span><span></span>
-              </div>
-              <span class="pro-items-price">13,000원</span>
-            </div>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
-                alt=""
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
-                alt=""
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img
-                src="./product_img/line_fix_brush_liner_02-430x430.jpg"
-                alt=""
-            /></a>
-          </li> -->
-        </ul>
+        <ul class="pro-product-list"></ul>
+        <div class="next-page">
+          <ul class="inner-num">
+            <li class="active" data-index="0">1</li>
+            <li data-index="1">2</li>
+            <li data-index="2">3</li>
+            <li data-index="3">
+              <img src="./product_img/icon-menu-arrow.svg" alt="" />
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
