--- a/240308/index04.html
+++ b/240308/index04.html
@@ -90,6 +90,24 @@
           </div>
         </article>
       </section>
+      <aside>
+        <div class="txt">
+          <h1>
+            TITLE<br />COMES<br />
+            HERE
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+            impedit corrupti molestiae accusamus tempore nihil sunt iusto labore
+            at dolor ex ratione quaerat a nemo! Ea deleniti nemo doloribus.
+            Mollitia!
+          </p>
+          <span>CLOSE</span>
+        </div>
+        <figure>
+          <video src="./vids/vid1.mp4" loop muted></video>
+        </figure>
+      </aside>
     </main>
   </body>
 </html>
