--- a/Product/proudct01.html
+++ b/Product/proudct01.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- custom -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./proStyle.css" />
     <script type="module" defer src="./script.js"></script>
     <title>메인페이지 헤더</title>
   </head>
@@ -859,7 +859,7 @@
                 </div>
                 <div class="common-responsibility-menu-list-cate-lip">
                   <a href="">전체</a>
-                  <a href="">립스틱</a>
+                  <a href="">립스틱</a``>
                   <a href="">틴트</a>
                   <a href="">글로스</a>
                   <a href="">립펜슬</a>
