--- a/Header/index.html
+++ b/Header/index.html
@@ -641,16 +641,28 @@
               <li>
                 <div class="common-responsibility-menu">
                   <a href="">MAKEUP LOOK</a>
-                  <span class="common-responsibility-menu-plus"> </span>
+                  <span class="common-responsibility-menu-plus commonplus">
+                    <span></span>
+                    <span></span>
+                  </span>
                 </div>
+                <div
+                  class="common-responsibility-menu-list commonlistnone"
+                ></div>
               </li>
             </ul>
             <ul>
               <li>
                 <div class="common-responsibility-menu">
                   <a href="">FOUNDATION FACTORY</a>
-                  <span class="common-responsibility-menu-plus"> </span>
+                  <span class="common-responsibility-menu-plus commonplus">
+                    <span></span>
+                    <span></span>
+                  </span>
                 </div>
+                <div
+                  class="common-responsibility-menu-list commonlistnone"
+                ></div>
               </li>
             </ul>
             <ul>
@@ -739,7 +751,7 @@
             <ul>
               <li>
                 <div class="common-cate-wrap">
-                  <div class="common-responsibility-menu-cate">
+                  <div class="common-responsibility-menu-cate-left">
                     <a href="">아이</a>
                     <span class="common-responsibility-menu-plus-cate">
                       <span></span>
@@ -748,7 +760,7 @@
                   </div>
                   <div class="common-responsibility-menu-cate">
                     <a href="">립</a>
-                    <span class="common-responsibility-menu-plus-cate">
+                    <span class="common-responsibility-menu-plus-cate-l">
                       <span></span>
                       <span></span>
                     </span>
@@ -773,7 +785,7 @@
               </li>
               <li>
                 <div class="common-cate-wrap">
-                  <div class="common-responsibility-menu-cate">
+                  <div class="common-responsibility-menu-cate-left">
                     <a href="">페이스</a>
                     <span class="common-responsibility-menu-plus-cate">
                       <span></span>
@@ -782,7 +794,7 @@
                   </div>
                   <div class="common-responsibility-menu-cate">
                     <a href="">네일</a>
-                    <span class="common-responsibility-menu-plus-cate">
+                    <span class="common-responsibility-menu-plus-cate-l">
                       <span></span>
                       <span></span>
                     </span>
@@ -794,6 +806,7 @@
                   <a href="">쿠션·파운데이션</a>
                   <a href="">BB·컨실러</a>
                   <a href="">팩트·파우더</a>
+                  <a href="">컨투어링·하이라이터</a>
                   <a href="">블러셔</a>
                 </div>
                 <div class="common-responsibility-menu-list-cate-lip">
@@ -807,7 +820,7 @@
               </li>
               <li>
                 <div class="common-cate-wrap">
-                  <div class="common-responsibility-menu-cate">
+                  <div class="common-responsibility-menu-cate-left">
                     <a href="">스킨케어</a>
                     <span class="common-responsibility-menu-plus-cate">
                       <span></span>
@@ -816,7 +829,7 @@
                   </div>
                   <div class="common-responsibility-menu-cate">
                     <a href="">마스크·팩</a>
-                    <span class="common-responsibility-menu-plus-cate">
+                    <span class="common-responsibility-menu-plus-cate-l">
                       <span></span>
                       <span></span>
                     </span>
@@ -824,11 +837,14 @@
                 </div>
                 <div class="common-responsibility-menu-list-cate">
                   <a href="">전체</a>
-                  <a href="">싱글섀도우</a>
-                  <a href="">아이팔레트</a>
-                  <a href="">마스카라</a>
-                  <a href="">아이라이너</a>
-                  <a href="">아이브로우</a>
+                  <a href="">토너·패드</a>
+                  <a href="">에멀전</a>
+                  <a href="">에센스·세럼</a>
+                  <a href="">크림·밤</a>
+                  <a href="">미스트</a>
+                  <a href="">선케어</a>
+                  <a href="">세트</a>
+                  <a href="">기타</a>
                 </div>
                 <div class="common-responsibility-menu-list-cate-lip">
                   <a href="">전체</a>
@@ -841,7 +857,7 @@
               </li>
               <li>
                 <div class="common-cate-wrap">
-                  <div class="common-responsibility-menu-cate">
+                  <div class="common-responsibility-menu-cate-left">
                     <a href="">클렌저</a>
                     <span class="common-responsibility-menu-plus-cate">
                       <span></span>
@@ -850,7 +866,7 @@
                   </div>
                   <div class="common-responsibility-menu-cate">
                     <a href="">바디</a>
-                    <span class="common-responsibility-menu-plus-cate">
+                    <span class="common-responsibility-menu-plus-cate-l">
                       <span></span>
                       <span></span>
                     </span>
@@ -858,11 +874,9 @@
                 </div>
                 <div class="common-responsibility-menu-list-cate">
                   <a href="">전체</a>
-                  <a href="">싱글섀도우</a>
-                  <a href="">아이팔레트</a>
-                  <a href="">마스카라</a>
-                  <a href="">아이라이너</a>
-                  <a href="">아이브로우</a>
+                  <a href="">페이셜 클렌징</a>
+                  <a href="">메이크업 클렌징</a>
+                  <a href="">필링·스크럽 </a>
                 </div>
                 <div class="common-responsibility-menu-list-cate-lip">
                   <a href="">전체</a>
@@ -875,7 +889,7 @@
               </li>
               <li>
                 <div class="common-cate-wrap">
-                  <div class="common-responsibility-menu-cate">
+                  <div class="common-responsibility-menu-cate-left">
                     <a href="">헤어</a>
                     <span class="common-responsibility-menu-plus-cate">
                       <span></span>
@@ -884,7 +898,7 @@
                   </div>
                   <div class="common-responsibility-menu-cate">
                     <a href="">툴</a>
-                    <span class="common-responsibility-menu-plus-cate">
+                    <span class="common-responsibility-menu-plus-cate-l">
                       <span></span>
                       <span></span>
                     </span>
@@ -892,11 +906,8 @@
                 </div>
                 <div class="common-responsibility-menu-list-cate">
                   <a href="">전체</a>
-                  <a href="">싱글섀도우</a>
-                  <a href="">아이팔레트</a>
-                  <a href="">마스카라</a>
-                  <a href="">아이라이너</a>
-                  <a href="">아이브로우</a>
+                  <a href="">헤어케어</a>
+                  <a href="">컬러스타일링</a>
                 </div>
                 <div class="common-responsibility-menu-list-cate-lip">
                   <a href="">전체</a>
